# flux-serverless

./: Dockerfile  README.md  deploy.py  handler.py  pyproject.toml  requirements.txt  server.py  test_endpoint.py
.github/workflows/: docker.yml
