[project]
name = "flux-serverless"
version = "0.1.0"
description = "Serverless text-to-image generation endpoint powered by FLUX.1-dev on RunPod"
requires-python = ">=3.10"
dependencies = [
    "runpod",
    "torch",
    "diffusers",
    "transformers",
    "accelerate",
    "sentencepiece",
    "protobuf",
    "pillow",
]

[project.optional-dependencies]
test = ["requests"]
